# Research-IntentSpecification

./: .coverage  .gitignore  BLOG.md  DESIGN_DOC.md  PAPER_DRAFT.md  README.md  Untitled.ipynb  acl_latex.tex  custom.bib  flatten_specs.py  pyproject.toml  requirements.txt  scratch_notebook.ipynb  validate_benchmark.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
data/generations/: HumanEval_12.jsonl  HumanEval_18.jsonl  HumanEval_20.jsonl  HumanEval_21.jsonl  HumanEval_25.jsonl  claude-sonnet-4-6__HumanEval_101.jsonl  claude-sonnet-4-6__HumanEval_102.jsonl  claude-sonnet-4-6__HumanEval_104.jsonl  claude-sonnet-4-6__HumanEval_105.jsonl  claude-sonnet-4-6__HumanEval_108.jsonl  claude-sonnet-4-6__HumanEval_111.jsonl  claude-sonnet-4-6__HumanEval_112.jsonl  claude-sonnet-4-6__HumanEval_12.jsonl  claude-sonnet-4-6__HumanEval_120.jsonl  claude-sonnet-4-6__HumanEval_126.jsonl  claude-sonnet-4-6__HumanEval_131.jsonl  claude-sonnet-4-6__HumanEval_135.jsonl  claude-sonnet-4-6__HumanEval_136.jsonl  claude-sonnet-4-6__HumanEval_140.jsonl  claude-sonnet-4-6__HumanEval_145.jsonl  claude-sonnet-4-6__HumanEval_149.jsonl  claude-sonnet-4-6__HumanEval_151.jsonl  claude-sonnet-4-6__HumanEval_158.jsonl  claude-sonnet-4-6__HumanEval_161.jsonl  claude-sonnet-4-6__HumanEval_163.jsonl  claude-sonnet-4-6__HumanEval_18.jsonl  claude-sonnet-4-6__HumanEval_20.jsonl  claude-sonnet-4-6__HumanEval_21.jsonl  claude-sonnet-4-6__HumanEval_25.jsonl  claude-sonnet-4-6__HumanEval_26.jsonl  claude-sonnet-4-6__HumanEval_30.jsonl  claude-sonnet-4-6__HumanEval_34.jsonl  claude-sonnet-4-6__HumanEval_42.jsonl  (+21 more)
data/specs/: canonicals.jsonl  (+1 more)
experiments/: exp1_ivr_by_type.py
results/: experiment1.json
scripts/: plot_ivr_distribution.py  run_eval.py  run_experiment1.py  validate_benchmark.py
tests/: test_core.py  test_data.py  test_evaluate.py
(+9 files in other folders)
