[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "intentspec"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.25.0",
    "anthropic>=0.25.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
